--- a/src/materials/calculus/derivative/definition.mdx
+++ b/src/materials/calculus/derivative/definition.mdx
@@ -106,6 +106,14 @@ Since the left and right side limit are different, the limit doesn't exist, and 
 
 Let $f(x)=\sqrt{\left | x \right |}$. Select all the statements below that are TRUE.
 
+export const differentiabilityOptions = [
+	"#f# is continuous at #x=0#.",
+	"#f# is continuous at #x#, where #- \infty \lt x \lt \infty #.",
+	"#f# is differentiable at #x=0#.",
+	"#f# is differentiable at #x#, where #- \infty \lt x \lt \infty #.",
+	"#f# is differentiable at #x#, where #- \infty \lt x \lt 0# and #0 \lt x \lt \infty#"
+]
+
 <Option id="differentiability" content="#f# is continuous at #x=0#." truth />
 <Option
   id="differentiability"
