--- a/src/materials/calculus/derivative/implicit.mdx
+++ b/src/materials/calculus/derivative/implicit.mdx
@@ -20,8 +20,7 @@ $$
 # Implicit Differentiation: Example
 
 <Example>
-  Given $x^3y^2+\tan{y}=x^2-4y$, find $\frac{dy}
-  {dx}$ using implicit differentiation.
+  Given $x^3y^2+\tan{y}=x^2-4y$, find $\frac{dy}{dx}$ using implicit differentiation.
 </Example>
 
 $$
@@ -45,6 +44,14 @@ The following describes an attempt on using implicit differentiation to find $\f
 ![Attempt of Implicit Differentiation](/materials/implicit_attempt.png "Attempt of Implicit Differentiation")
 
 Select all options below that are TRUE.
+
+export const implicitOptions = [
+	"The attempt went wrong from step A onwards.",
+	"The attempt went wrong from step B onwards.",
+	"The attempt went wrong from step C onwards.",
+	"Regardless of whether the past steps are correct or not, the final rewriting of the answer after step D is correct.",
+	"The attempt produced a correct answer in step D.",
+];
 
 <Option id="implicit" content="The attempt went wrong from step A onwards." />
 <Option id="implicit" content="The attempt went wrong from step B onwards." />
