fix: build errors

--- a/src/materials/calculus/derivative-applications/extrema.mdx
+++ b/src/materials/calculus/derivative-applications/extrema.mdx
@@ -39,15 +39,12 @@ Consider the following example: $\frac{x^3}{4} - 3x$. By observing the graph, yo
 </Theorem>
 
 <Theorem title="Extreme Value Theorem">
-  If $f$ is continuous on a closed interval $[a,b]$, then $f$ attains an
-  absolute maximum value $f(c)$ for some number $c$ in $[a,b]$ and an absolute
-  minimum value $f(d)$ for some number $d$ in $[a,b]$.
+  If $f$ is continuous on a closed interval $[a,b]$, then $f$ attains an absolute maximum value $f(c)$ for some number $c$ in $[a,b]$ and an absolute minimum value $f(d)$ for some number $d$ in $[a,b]$.
 </Theorem>
 
 <Theorem title="Critical Number">
-  A function $f$ has the **critical number** $c$ in its domain, where either
-  $f'(c) = 0$ or $f'(c)$ doesn't exist.
-</Theorem>{" "}
+  A function $f$ has the **critical number** $c$ in its domain, where either $f'(c) = 0$ or $f'(c)$ doesn't exist.
+</Theorem>
 
 This means that we can find the **extrema** of function by deriving the function, then finding the appropriate $c$ values that fulfill the above theorem(s).
 
