--- a/src/materials/calculus/derivative-applications/increasing.mdx
+++ b/src/materials/calculus/derivative-applications/increasing.mdx
@@ -15,8 +15,8 @@ To find at which intervals a function become increasing or decreasing:
 
 <Theorem title="The First Derivative Test">
 Let $c$ be $f$'s critical number on $(a, b)$, and $f$ is differentiable on $(a, b)$ with the possible exception of $c$.
--  If $f'(x)>0$ on $(a,c)$ and$f'(x)\<0$ on $(c,b)$, then $f$ has a relative maximum at $c$.
--  If $f'(x)\<0$ on $(a,c)$ and$f'(x)>0$ on $(c,b)$, then $f$ has a relative minimum at $c$.
+-  If $f'(x)\gt0$ on $(a,c)$ and$f'(x)\lt0$ on $(c,b)$, then $f$ has a relative maximum at $c$.
+-  If $f'(x)\lt0$ on $(a,c)$ and$f'(x)\gt0$ on $(c,b)$, then $f$ has a relative minimum at $c$.
 -  If $f'(x)$ has the same sign on both intervals, then $c$ is neither $f$'s relative maximum nor minimum.
 </Theorem>
 
