--- a/src/materials/calculus/derivative/inverse.mdx
+++ b/src/materials/calculus/derivative/inverse.mdx
@@ -26,7 +26,7 @@ The above derivations can be obtained by using implicit differentiation.
 # Derivatives of Inverse Trigonometric Functions: Proof Example
 
 <Example>
-Show that $\frac{d}{dx}\sin^{-1}{u} = \frac{u\'}{\sqrt{1-u^2}}$, where $u$ is a function.
+Show that $\frac{d}{dx}\sin^{-1}{u} = \frac{u'}{\\sqrt{1-u^2}}$, where $u$ is a function.
 </Example>
 
 Recall the trigonometric identity $\sin^2{x} + \cos^2{x} = 1$.
