--- a/src/materials/calculus/derivative-applications/extrema.mdx
+++ b/src/materials/calculus/derivative-applications/extrema.mdx
@@ -114,35 +114,12 @@ Therefore, the absolute maximum and minimum of $f$ in the given interval, respec
 Let $f(x)=-x+2\sin{x}$, and $g(x)=\ln\left(x^{2}+4x+5\right)-\frac{x^{2}+10x}{x^{2}+x+8}$. Select all options below that are TRUE.
 
 export const extremaOptions = [
-	"#f# has exactly one critical point in its domain.",
-	"#f# has exactly one critical point in #\left [ 0, \frac{\pi}{2} \right ]#.",
-	"#g# has exactly three critical points in its domain.",
-	"#g# has exactly three critical points in #\left [ -2, 2 \right ]#.",
-	"#f#'s maximum value in #\left [ 0, \frac{\pi}{2} \right ]# is #2 - \frac{\pi}{2}#.",
-	"#g#'s minimum value in #0#.",
+	[0, "#f# has exactly one critical point in its domain."],
+	[1, "#f# has exactly one critical point in #\\left [ 0, \\frac{\\pi}{2} \\right ]#."],
+	[1, "#g# has exactly three critical points in its domain."],
+	[1, "#g# has exactly three critical points in #\\left [ -2, 2 \\right ]#."],
+	[0, "#f#'s maximum value in #\\left [ 0, \\frac{\\pi}{2} \\right ]# is #2 - \\frac{\\pi}{2}#."],
+	[1, "#g#'s minimum value in #0#."],
 ];
 
-<Option
-  id="extrema"
-  content="#f# has exactly one critical point in its domain."
-/>
-<Option
-  id="extrema"
-  content="#f# has exactly one critical point in #\left [ 0, \frac{\pi}{2} \right ]#."
-  truth
-/>
-<Option
-  id="extrema"
-  content="#g# has exactly three critical points in its domain."
-  truth
-/>
-<Option
-  id="extrema"
-  content="#g# has exactly three critical points in #\left [ -2, 2 \right ]#."
-  truth
-/>
-<Option
-  id="extrema"
-  content="#f#'s maximum value in #\left [ 0, \frac{\pi}{2} \right ]# is #2 - \frac{\pi}{2}#."
-/>
-<Option id="extrema" content="#g#'s minimum value in #0#." truth />
+<Options id="extrema" options={extremaOptions} />
