chore(content): fix error

--- a/src/materials/calculus/derivative-applications/examples.mdx
+++ b/src/materials/calculus/derivative-applications/examples.mdx
@@ -57,7 +57,7 @@ To solve optimization problems, you need to be able to identify the correct vari
 # Optimization Problems: Example
 
 <Example>
-  Suppose you have a wire that is $40\text{cm}$ long to form a rectangle. What
+  Suppose you have a wire that is $40\text{ cm}$ long to form a rectangle. What
   is its largest possible area?
 </Example>
 
@@ -76,4 +76,4 @@ w&=10
 \end{align*}
 $$
 
-We are not finished yet, as this result only shows at which width will the rectangle achieve its maximum area. Substituting this into our initial equality yields us the length $10$\text{ cm}. Therefore, the maximum possible area is $100\text{ cm}^2$.
+We are not finished yet, as this result only shows at which width will the rectangle achieve its maximum area. Substituting this into our initial equality yields us the length $10\text{ cm}$. Therefore, the maximum possible area is $100\text{ cm}^2$.
